--- a/soft/keilsoft/powbridge.uvprojx
+++ b/soft/keilsoft/powbridge.uvprojx
@@ -313,13 +313,13 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>2</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
             <EnumInt>0</EnumInt>
-            <PlainCh>0</PlainCh>
+            <PlainCh>1</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
             <wLevel>1</wLevel>
@@ -330,8 +330,8 @@
             <useXO>0</useXO>
             <v6Lang>3</v6Lang>
             <v6LangP>3</v6LangP>
-            <vShortEn>1</vShortEn>
-            <vShortWch>1</vShortWch>
+            <vShortEn>0</vShortEn>
+            <vShortWch>0</vShortWch>
             <v6Lto>0</v6Lto>
             <v6WtE>0</v6WtE>
             <v6Rtti>0</v6Rtti>
@@ -402,6 +402,16 @@
               <FileName>TContRect.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\classes\TContRect.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TCORE.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\TCORE.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TPARAMS.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\TPARAMS.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -587,6 +597,26 @@
               <FileName>ITIMINT.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\classes\ITIMINT.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TEASYKEYS.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\TEASYKEYS.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>TM24Cxxx.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\TM24Cxxx.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>DISPATCHIFACE.CPP</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\DISPATCHIFACE.CPP</FilePath>
+            </File>
+            <File>
+              <FileName>I2CSOFTWARE.CPP</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\I2CSOFTWARE.CPP</FilePath>
             </File>
           </Files>
         </Group>
