--- a/soft/keilsoft/powbridge.uvprojx
+++ b/soft/keilsoft/powbridge.uvprojx
@@ -319,7 +319,7 @@
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
             <EnumInt>0</EnumInt>
-            <PlainCh>1</PlainCh>
+            <PlainCh>0</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
             <wLevel>1</wLevel>
@@ -409,9 +409,9 @@
               <FilePath>.\src\classes\TCORE.cpp</FilePath>
             </File>
             <File>
-              <FileName>TPARAMS.cpp</FileName>
+              <FileName>TMAVPARAMS.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\classes\TPARAMS.cpp</FilePath>
+              <FilePath>.\src\classes\TMAVPARAMS.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -584,11 +584,6 @@
               <FilePath>.\src\classes\LCD132x64.cpp</FilePath>
             </File>
             <File>
-              <FileName>wendy16_engl.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\classes\wendy16_engl.cpp</FilePath>
-            </File>
-            <File>
               <FileName>IEXTINT.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\classes\IEXTINT.cpp</FilePath>
@@ -617,6 +612,11 @@
               <FileName>I2CSOFTWARE.CPP</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\classes\I2CSOFTWARE.CPP</FilePath>
+            </File>
+            <File>
+              <FileName>ptmono8.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\classes\fonts\ptmono8.cpp</FilePath>
             </File>
           </Files>
         </Group>
