--- a/soft/keilsoft/powbridge.uvprojx
+++ b/soft/keilsoft/powbridge.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>POWBRIDGE</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pArmCC>6160000::V6.16::ARMCLANG</pArmCC>
       <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
@@ -52,7 +53,7 @@
           <OutputName>powbridge</OutputName>
           <CreateExecutable>1</CreateExecutable>
           <CreateLib>0</CreateLib>
-          <CreateHexFile>0</CreateHexFile>
+          <CreateHexFile>1</CreateHexFile>
           <DebugInformation>1</DebugInformation>
           <BrowseInformation>1</BrowseInformation>
           <ListingPath>.\Listings\</ListingPath>
@@ -134,11 +135,11 @@
             <RunIndependent>0</RunIndependent>
             <UpdateFlashBeforeDebugging>1</UpdateFlashBeforeDebugging>
             <Capability>1</Capability>
-            <DriverSelection>-1</DriverSelection>
+            <DriverSelection>4096</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
           <Flash2>BIN\UL2CM3.DLL</Flash2>
-          <Flash3></Flash3>
+          <Flash3>"" ()</Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
           <pFcarmGrp></pFcarmGrp>
@@ -319,7 +320,7 @@
             <OneElfS>1</OneElfS>
             <Strict>0</Strict>
             <EnumInt>0</EnumInt>
-            <PlainCh>0</PlainCh>
+            <PlainCh>1</PlainCh>
             <Ropi>0</Ropi>
             <Rwpi>0</Rwpi>
             <wLevel>1</wLevel>
@@ -328,8 +329,8 @@
             <uC99>0</uC99>
             <uGnu>0</uGnu>
             <useXO>0</useXO>
-            <v6Lang>3</v6Lang>
-            <v6LangP>3</v6LangP>
+            <v6Lang>0</v6Lang>
+            <v6LangP>0</v6LangP>
             <vShortEn>0</vShortEn>
             <vShortWch>0</vShortWch>
             <v6Lto>0</v6Lto>
@@ -337,7 +338,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>STM32F401xC,SBCPP,HSE_VALUE=25000000</Define>
+              <Define>STM32F401xC,SBCPP,HSE_VALUE=25000000,HRDCPU=4</Define>
               <Undefine></Undefine>
               <IncludePath>.\src\STM32F4xx_HAL_Driver\Inc;.\src\STM32F4xx_HAL_Driver;.\src\classes</IncludePath>
             </VariousControls>
@@ -397,11 +398,6 @@
               <FileName>TAWAVE.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\src\classes\TAWAVE.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>TContRect.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\classes\TContRect.cpp</FilePath>
             </File>
             <File>
               <FileName>TCORE.cpp</FileName>
@@ -624,9 +620,9 @@
               <FilePath>.\src\classes\TGLOBALISR.cpp</FilePath>
             </File>
             <File>
-              <FileName>THALLRATIOMETRIC.cpp</FileName>
+              <FileName>THALLDIG.cpp</FileName>
               <FileType>8</FileType>
-              <FilePath>.\src\classes\THALLRATIOMETRIC.cpp</FilePath>
+              <FilePath>.\src\classes\THALLDIG.cpp</FilePath>
             </File>
           </Files>
         </Group>
